--- a/FrOnDaL Thresh/FrOnDaL Thresh/FrOnDaL Thresh.csproj
+++ b/FrOnDaL Thresh/FrOnDaL Thresh/FrOnDaL Thresh.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="FrOnDaLThresh.cs" />
     <Compile Include="GameObjects.cs" />
+    <Compile Include="Invulnerable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
