--- a/FrOnDaL AIO/FrOnDaL AIO/FrOnDaL AIO.csproj
+++ b/FrOnDaL AIO/FrOnDaL AIO/FrOnDaL AIO.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Champions\DrMundo.cs" />
     <Compile Include="Champions\Jhin.cs" />
     <Compile Include="Champions\Lux.cs" />
     <Compile Include="Champions\Shen.cs" />
